Flexible hook declaration system using annotation.